# Jayroes-Price-match-indexing

./: .gitignore  README.md  pyproject.toml
scripts/: linux_setup
src/jpricetool/: main.py  point_of_sale.py  supplier.py
